syntax = "proto3";

option java_multiple_files = true;

package trabica;

message Peer {
  string host = 1;
  int32 port = 2;
}

message QuorumNode {
  string id = 1;
  Peer peer = 2;
}

message LocalState {
  QuorumNode node = 1;
  int64 currentTerm = 2;
  QuorumNode votedFor = 3;
}

message Quorum {
  repeated QuorumNode nodes = 1;
}

message Header {
  QuorumNode node = 1;
  int64 messageId = 2;
  int64 term = 3;
}

enum LogEntryTag {
  Data = 0;
  Conf = 1;
}

message LogEntry {
  int64 index = 1;
  int64 term = 2;
  LogEntryTag tag = 3;
  bytes data = 4;
}

message AppendEntriesRequest {
  Header header = 1;
  int64 prevLogIndex = 2;
  int64 prevLogTerm = 3;
  int64 commitIndex = 4;
  repeated LogEntry entries = 5;
}

message AppendEntriesResponse {
  Header header = 1;
  bool success = 2;
}

message VoteRequest {
  Header header = 1;
  int64 lastLogIndex = 2;
  int64 lastLogTerm = 3;
}

message VoteResponse {
  Header header = 1;
  bool voteGranted = 2;
}

message AddServerRequest {
  QuorumNode node = 1;
}

message AddServerResponse {
  enum Status {
    NotLeader = 0;
    Timeout = 1;
    OK = 2;
  }
  Status status = 1;
  optional QuorumNode leaderHint = 2;
}

message RemoveServerRequest {
  QuorumNode node = 1;
}

message RemoveServerResponse {
  enum Status {
    NotLeader = 0;
    OK = 1;
  }
  Status status = 1;
  optional QuorumNode leaderHint = 2;
}
